--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,17 +31,32 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">192.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">7</td><td class="numi">7</td><td class="numi">0</td><td class="numi">0</td><td class="numi">163.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="6">com.Orange.testCases.EmployeeListTest</td><td><a href="#m1"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656140925080</td><td class="numi">139072</td></tr><tr class="passedodd"><td><a href="#m2"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656140925080</td><td class="numi">139072</td></tr><tr class="passedodd"><td><a href="#m3"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656140925080</td><td class="numi">139072</td></tr><tr class="passedodd"><td><a href="#m4"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656140925080</td><td class="numi">139072</td></tr><tr class="passedodd"><td><a href="#m5"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656140925080</td><td class="numi">139072</td></tr><tr class="passedodd"><td><a href="#m6"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656140925080</td><td class="numi">139072</td></tr>
-<tr class="passedeven"><td rowspan="1">com.Orange.testCases.CandidateDetailsTest</td><td><a href="#m7"><b>DownloadCV</b>  ("Download CV for Validation")</a></td><td class="numi">1</td><td>1656141073473</td><td class="numi">12146</td></tr>
-<tr class="passedodd"><td rowspan="1">com.Orange.testCases.LoginPageTest</td><td><a href="#m8"><b>loginValidation</b>  </a></td><td class="numi">1</td><td>1656140910261</td><td class="numi">6235</td></tr>
+<tr class="passedodd"><td rowspan="1">com.Orange.testCases.LoginPageTest</td><td><a href="#m1"><b>loginValidation</b>  </a></td><td class="numi">1</td><td>1656212952496</td><td class="numi">6147</td></tr>
+<tr class="passedeven"><td rowspan="6">com.Orange.testCases.EmployeeListTest</td><td><a href="#m2"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656212968891</td><td class="numi">136066</td></tr><tr class="passedeven"><td><a href="#m3"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656212968891</td><td class="numi">136066</td></tr><tr class="passedeven"><td><a href="#m4"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656212968891</td><td class="numi">136066</td></tr><tr class="passedeven"><td><a href="#m5"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656212968891</td><td class="numi">136066</td></tr><tr class="passedeven"><td><a href="#m6"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656212968891</td><td class="numi">136066</td></tr><tr class="passedeven"><td><a href="#m7"><b>AddEmployees</b>  </a></td><td class="numi">6</td><td>1656212968891</td><td class="numi">136066</td></tr>
 </table>
 <h1>Test</h1>
 <h2 id="m1">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th></tr>
+<tr class="param stripe"><td>Admin</td>
+<td>admin123</td>
+<td>Caterpee</td>
+<td>Metapod</td>
+<td>Butterfree</td>
+<td>012</td>
+<td>\Images\Butterfree.png</td>
+<td>Butterfree</td>
+<td>FreeFreeFree</td>
+<td>FreeFreeFree</td>
+</tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th></tr>
 <tr class="param stripe"><td>Admin</td>
@@ -57,31 +72,7 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.Orange.testCases.CandidateDetailsTest:DownloadCV</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>Admin</td>
-<td>admin123</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m3">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th></tr>
-<tr class="param stripe"><td>Admin</td>
-<td>admin123</td>
-<td>Bulbasaur</td>
-<td>Bulbasaur</td>
-<td>Bulbasaur</td>
-<td>001</td>
-<td>\Images\Bulbasaur.png</td>
-<td>Bulbasaur</td>
-<td>BulbaBulb</td>
-<td>BulbaBulb</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th></tr>
 <tr class="param stripe"><td>Admin</td>
@@ -97,19 +88,27 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m4">com.Orange.testCases.LoginPageTest:loginValidation</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
+<tr class="param stripe"><td>Admin</td>
+<td>admin123</td>
+</tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m5">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th></tr>
 <tr class="param stripe"><td>Admin</td>
 <td>admin123</td>
-<td>Caterpee</td>
-<td>Metapod</td>
-<td>Butterfree</td>
-<td>012</td>
-<td>\Images\Butterfree.png</td>
-<td>Butterfree</td>
-<td>FreeFreeFree</td>
-<td>FreeFreeFree</td>
+<td>Pidgey</td>
+<td>Pidgeotto</td>
+<td>Pidgeotto</td>
+<td>017</td>
+<td>\Images\Pidgeotto.png</td>
+<td>Pidgeotto</td>
+<td>HaaHaaHaa</td>
+<td>HaaHaaHaa</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
@@ -129,27 +128,19 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">com.Orange.testCases.LoginPageTest:loginValidation</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>Admin</td>
-<td>admin123</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
+<h2 id="m7">com.Orange.testCases.EmployeeListTest:AddEmployees</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th></tr>
 <tr class="param stripe"><td>Admin</td>
 <td>admin123</td>
-<td>Pidgey</td>
-<td>Pidgeotto</td>
-<td>Pidgeotto</td>
-<td>017</td>
-<td>\Images\Pidgeotto.png</td>
-<td>Pidgeotto</td>
-<td>HaaHaaHaa</td>
-<td>HaaHaaHaa</td>
+<td>Bulbasaur</td>
+<td>Bulbasaur</td>
+<td>Bulbasaur</td>
+<td>001</td>
+<td>\Images\Bulbasaur.png</td>
+<td>Bulbasaur</td>
+<td>BulbaBulb</td>
+<td>BulbaBulb</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
