--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,52 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c471bd">  <td>22/06/25 12:38:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.Setup()[pri:0, instance:com.Orange.testCases.LoginPageTest@18ca3c62]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="c471bd">  <td>22/06/25 12:38:30</td>   <td>14919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginValidation(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.LoginPageTest@18ca3c62]">loginValidation</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="c471bd">  <td>22/06/25 12:38:37</td>   <td>21909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.Orange.testCases.LoginPageTest@18ca3c62]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:38:37</td>   <td>22041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:38:45</td>   <td>29738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:00</td>   <td>45438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:00</td>   <td>45438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:10</td>   <td>55351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:25</td>   <td>69723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:25</td>   <td>69725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:32</td>   <td>77558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:47</td>   <td>92130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:47</td>   <td>92130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:56</td>   <td>101275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:13</td>   <td>118579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:13</td>   <td>118580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:23</td>   <td>128000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:39</td>   <td>144183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:39</td>   <td>144184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:50</td>   <td>155586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:41:05</td>   <td>169691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="87ba81">  <td>22/06/25 12:41:05</td>   <td>169737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CandidateDetailsTest.Setup()[pri:0, instance:com.Orange.testCases.CandidateDetailsTest@7d2a6eac]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="87ba81">  <td>22/06/25 12:41:13</td>   <td>178131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CandidateDetailsTest.DownloadCV(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.CandidateDetailsTest@7d2a6eac]">DownloadCV</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="87ba81">  <td>22/06/25 12:41:26</td>   <td>191648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CandidateDetailsTest.CloseBrowser()[pri:0, instance:com.Orange.testCases.CandidateDetailsTest@7d2a6eac]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
+<tr bgcolor="cf65f7">  <td>22/06/26 08:39:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.Setup()[pri:0, instance:com.Orange.testCases.LoginPageTest@4102b1b1]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="cf65f7">  <td>22/06/26 08:39:12</td>   <td>9223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginValidation(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.LoginPageTest@4102b1b1]">loginValidation</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="cf65f7">  <td>22/06/26 08:39:19</td>   <td>15828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.Orange.testCases.LoginPageTest@4102b1b1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:19</td>   <td>15893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:28</td>   <td>25618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:40</td>   <td>37610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:40</td>   <td>37610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:50</td>   <td>47531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:05</td>   <td>61872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:05</td>   <td>61872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:13</td>   <td>70549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:32</td>   <td>89294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:32</td>   <td>89294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:41</td>   <td>98429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:58</td>   <td>115366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:58</td>   <td>115366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:08</td>   <td>125533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:23</td>   <td>140250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:23</td>   <td>140250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:32</td>   <td>149594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:46</td>   <td>162873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
 </table>
