--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:52:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">AddEmployees</td> 
-  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:18</td>   <td>20690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">AddEmployees</td> 
-  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:38</td>   <td>40801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">AddEmployees</td> 
-  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:59</td>   <td>61873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">AddEmployees</td> 
-  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:54:24</td>   <td>87055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">AddEmployees</td> 
-  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:54:48</td>   <td>110373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">AddEmployees</td> 
-  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:52:43</td>   <td>-13764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:07</td>   <td>10120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:29</td>   <td>32022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:50</td>   <td>52501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:54:11</td>   <td>74188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:54:35</td>   <td>97739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:07</td>   <td>9744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:29</td>   <td>31617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:53:49</td>   <td>51592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:54:11</td>   <td>73929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:54:35</td>   <td>97413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
-<tr bgcolor="87bc84">  <td>22/06/18 08:55:00</td>   <td>123151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@55e7a35c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1834031967</td>   <td></td> </tr>
+<tr bgcolor="9691f8">  <td>22/06/26 08:20:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.Setup()[pri:0, instance:com.Orange.testCases.LoginPageTest@62d363ab]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@324507700</td>   <td></td> </tr>
+<tr bgcolor="9691f8">  <td>22/06/26 08:20:42</td>   <td>12800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginValidation(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.LoginPageTest@62d363ab]">loginValidation</td> 
+  <td>main@324507700</td>   <td></td> </tr>
+<tr bgcolor="9691f8">  <td>22/06/26 08:20:49</td>   <td>18846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.Orange.testCases.LoginPageTest@62d363ab]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@324507700</td>   <td></td> </tr>
 </table>
