--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,52 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:38:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:10</td>   <td>25613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:32</td>   <td>47820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:56</td>   <td>71537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:23</td>   <td>98262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:50</td>   <td>125848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">AddEmployees</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="87ba81">  <td>22/06/25 12:41:26</td>   <td>161910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CandidateDetailsTest.CloseBrowser()[pri:0, instance:com.Orange.testCases.CandidateDetailsTest@7d2a6eac]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="87ba81">  <td>22/06/25 12:41:13</td>   <td>148393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CandidateDetailsTest.DownloadCV(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.CandidateDetailsTest@7d2a6eac]">DownloadCV</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="c471bd">  <td>22/06/25 12:38:15</td>   <td>-29738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.Setup()[pri:0, instance:com.Orange.testCases.LoginPageTest@18ca3c62]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:38:37</td>   <td>-7697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:00</td>   <td>15700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:25</td>   <td>39987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:47</td>   <td>62392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:13</td>   <td>88842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:39</td>   <td>114446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="87ba81">  <td>22/06/25 12:41:05</td>   <td>139999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CandidateDetailsTest.Setup()[pri:0, instance:com.Orange.testCases.CandidateDetailsTest@7d2a6eac]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="c471bd">  <td>22/06/25 12:38:30</td>   <td>-14819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginValidation(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.LoginPageTest@18ca3c62]">loginValidation</td> 
-  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="c471bd">  <td>22/06/25 12:38:37</td>   <td>-7829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.Orange.testCases.LoginPageTest@18ca3c62]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:00</td>   <td>15700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:25</td>   <td>39985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:39:47</td>   <td>62392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:13</td>   <td>88841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:40:39</td>   <td>114445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
-<tr bgcolor="a8bb7d">  <td>22/06/25 12:41:05</td>   <td>139953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@6c2f1700]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1186371052</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:50</td>   <td>21913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:13</td>   <td>44931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:41</td>   <td>72811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:08</td>   <td>99915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:32</td>   <td>123976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeListTest.AddEmployees(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">AddEmployees</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="cf65f7">  <td>22/06/26 08:39:03</td>   <td>-25618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.Setup()[pri:0, instance:com.Orange.testCases.LoginPageTest@4102b1b1]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:19</td>   <td>-9725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:40</td>   <td>11992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:05</td>   <td>36254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:32</td>   <td>63676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:58</td>   <td>89748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:23</td>   <td>114632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeListTest.Setup()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="cf65f7">  <td>22/06/26 08:39:12</td>   <td>-16395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginValidation(java.lang.String, java.lang.String)[pri:0, instance:com.Orange.testCases.LoginPageTest@4102b1b1]">loginValidation</td> 
+  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="cf65f7">  <td>22/06/26 08:39:19</td>   <td>-9790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.Orange.testCases.LoginPageTest@4102b1b1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:39:40</td>   <td>11992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:05</td>   <td>36254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:32</td>   <td>63676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:40:58</td>   <td>89748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:23</td>   <td>114632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
+<tr bgcolor="d1ac79">  <td>22/06/26 08:41:46</td>   <td>137255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EmployeeListTest.teardown()[pri:0, instance:com.Orange.testCases.EmployeeListTest@4201a617]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@828088650</td>   <td></td> </tr>
 </table>
